# clustered_forward_demo_vk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
base/: Aabb.hpp  Buffer.hpp  CMakeLists.txt  Camera.hpp  Device.hpp  FPS_log.hpp  Model.hpp  Physical_device.hpp  Prog_info_base.hpp  Program_base.hpp  Render_pass.hpp  Render_target.hpp  Shader.hpp  Shell_base.hpp  Swapchain.hpp  Texture.hpp  Timer.hpp  assert.hpp  color.hpp  math.hpp  random.hpp  tools.hpp
data/fonts/: RobotoMonoMedium.fnt  RobotoMonoMedium.ktx  license.txt
data/models/dummy/: dummy_normal.ktx
data/models/sibenik/: sibenik_bubble.fbx
demo/: CMakeLists.txt  Light.hpp  Model.hpp  Prog_info.hpp  Program.hpp  Render_target.hpp  Shell.hpp  Swapchain.hpp  Text_overlay.hpp  calc_grid_offsets.comp  calc_grid_offsets.comp.h  calc_light_grids.comp  calc_light_grids.comp.h  calc_light_list.comp  calc_light_list.comp.h  cluster_forward.frag  cluster_forward.frag.h  cluster_forward.vert  cluster_forward.vert.h  clustering.frag  clustering.frag.h  clustering.vert  clustering.vert.h  light_particles.frag  light_particles.frag.h  light_particles.vert  light_particles.vert.h  main.cpp  simple.vert  simple.vert.h  textoverlay.frag  textoverlay.vert
script/: glsl-to-spirv
